src/etc/djson/BC_JSON.h

/* BC_JSON Types: */
#define BC_JSON_Invalid       (0)
#define BC_JSON_False         (1 << 0)
#define BC_JSON_True          (1 << 1)
#define BC_JSON_String        (1 << 4)
	/* The BC_JSON structure: */
	typedef struct BC_JSON {
		/* next/prev allow you to walk array/object chains. Alternatively, use
		 * GetArraySize/GetArrayItem/GetObjectItem */
		struct BC_JSON* next;
		struct BC_JSON* prev;
		/* An array or object item will have a child pointer pointing to a chain of the items in the
		 * array/object. */
		struct BC_JSON* child;

		/* The type of the item, as above. */
		int           type;

		/* The item's string, if type==BC_JSON_String  and type == BC_JSON_Raw */
		char*         value_string;

		/* The item's number, if type==JSON_TYPE.NUMBER */
		real          value_number;

		/* The item's name string, if this item is the child of, or is in the list of subitems of an
		 * object. */
		char*         name_string;
	} BC_JSON;
	typedef struct BC_JSON_Hooks {
		/* malloc/free are CDECL on Windows regardless of the default calling convention of the
		 * compiler, so ensure the hooks allow passing those functions directly. */
		void*(CJSON_CDECL* malloc_fn)(size_t sz);
		void(CJSON_CDECL* free_fn)(void* ptr);
	} BC_JSON_Hooks;
	/* Supply malloc, realloc and free functions to BC_JSON */
	CJSON_PUBLIC(void) BC_JSON_InitHooks(BC_JSON_Hooks* hooks);
	/* Change the value_string of a BC_JSON_String object, only takes effect when type of object is
	 * BC_JSON_String */
	CJSON_PUBLIC(char*) BC_JSON_SetValuestring(BC_JSON* object, const char* value_string);
/* If the object is not a boolean type this does nothing and returns BC_JSON_Invalid else it returns
 * the new type*/
#define BC_JSON_SetBoolValue(object, boolValue)                            \
	((object != NULL && ((object)->type & (BC_JSON_False | BC_JSON_True)))     \
	   ? (object)->type = ((object)->type & (~(BC_JSON_False | BC_JSON_True))) \
	                    | ((boolValue) ? BC_JSON_True : BC_JSON_False)         \
	   : BC_JSON_Invalid)
	/* malloc/free objects using the malloc/free functions that have been set with BC_JSON_InitHooks */
	CJSON_PUBLIC(void*) BC_JSON_malloc(size_t size);
	CJSON_PUBLIC(void) BC_JSON_free(void* object);