src/etc/djson/package.d


/* Change the value_string of a BC_JSON_String object, only takes effect when type of object is
	 * BC_JSON_String */
char* BC_JSON_SetValuestring(BC_JSON* object, const(char)* value_string);

/* If the object is not a boolean type this does nothing and returns BC_JSON_Invalid else it returns
 * the new type*/
enum BC_JSON_SetBoolValue(object, boolValue) = ((object != NULL && ((object)
			.type & (BC_JSON_False | BC_JSON_True))) ? (object).type = ((object)
			.type & (~(BC_JSON_False | BC_JSON_True))) | ((boolValue) ? BC_JSON_True
			: BC_JSON_False) : BC_JSON_Invalid);

/* malloc/free objects using the malloc/free functions that have been set with BC_JSON_InitHooks */
void* BC_JSON_malloc(size_t size);
void BC_JSON_free(void* object);
